--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "craig-churchill-server",
+  "name": "binanceee",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "next": "^15.5.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "16.1.1",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
+    "bcryptjs": "^2.4.3"
   }
 }
